# ComfyUI-Notebook

./: .gitignore  README.md  __init__.py  fix_globals.py  node_notebook_cell.py  node_notebook_force_rerun.py  node_preview_html.py  notebook_apis.py  pyproject.toml
patches/: patch_node_order.py
web/: node_preview_html.js  notebook_tab_variables.css  notebook_tab_variables.js  notebook_widget.js  preview_any_size.js  shortcut.js  workflow_close_cleanup.js
workflows/: GPT-demo.json
